Count of raises added and creation of script to ingest the postgresql db

--- a/notebooks/eh_py_analysis.ipynb
+++ b/notebooks/eh_py_analysis.ipynb
@@ -4761,20 +4761,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/parser/pytorch_stats.csv\n",
-      "../output/parser/pytorch_stats.csv\n",
-      "../output/parser/pytorch_stats.csv\n",
-      "../output/parser/pytorch_stats.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import pandas as pd\n",
@@ -4785,7 +4774,7 @@
     "\n",
     "for project in projects:\n",
     "    #filenames = glob.glob(f\"../output/parser/*.csv\")\n",
-    "    print(filename)\n",
+    "    #print(filename)\n",
     "    df = pd.read_csv(f\"../output/parser/{project}_stats.csv\")\n",
     "    df['project'] = project\n",
     "    dfs.append(df)\n"
@@ -4793,7 +4782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -4822,6 +4811,9 @@
        "      <th>n_try_except</th>\n",
        "      <th>n_try_pass</th>\n",
        "      <th>n_generic_except</th>\n",
+       "      <th>n_captures_broad_raise</th>\n",
+       "      <th>n_captures_try_except_raise</th>\n",
+       "      <th>n_captures_misplaced_bare_raise</th>\n",
        "      <th>project</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4830,6 +4822,9 @@
        "      <th>0</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>_path</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -4842,6 +4837,9 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4849,6 +4847,9 @@
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>_reverse_with_prefix</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>django</td>\n",
@@ -4860,12 +4861,18 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>resolve_error_handler</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -4883,15 +4890,22 @@
        "3  /home/r4ph/desenv/exception-miner/projects/py/...                reverse   \n",
        "4  /home/r4ph/desenv/exception-miner/projects/py/...  resolve_error_handler   \n",
        "\n",
-       "   n_try_except  n_try_pass  n_generic_except project  \n",
-       "0             0           0                 0  django  \n",
-       "1             1           0                 0  django  \n",
-       "2             1           0                 0  django  \n",
-       "3             0           0                 0  django  \n",
-       "4             0           0                 0  django  "
+       "   n_try_except  n_try_pass  n_generic_except  n_captures_broad_raise  \\\n",
+       "0             0           0                 0                       0   \n",
+       "1             1           0                 0                       0   \n",
+       "2             1           0                 0                       0   \n",
+       "3             0           0                 0                       0   \n",
+       "4             0           0                 0                       0   \n",
+       "\n",
+       "   n_captures_try_except_raise  n_captures_misplaced_bare_raise project  \n",
+       "0                            0                                0  django  \n",
+       "1                            0                                0  django  \n",
+       "2                            0                                0  django  \n",
+       "3                            0                                0  django  \n",
+       "4                            0                                0  django  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4903,16 +4917,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(119038, 6)"
+       "(119038, 9)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4923,7 +4937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4952,6 +4966,9 @@
        "      <th>n_try_except</th>\n",
        "      <th>n_try_pass</th>\n",
        "      <th>n_generic_except</th>\n",
+       "      <th>n_captures_broad_raise</th>\n",
+       "      <th>n_captures_try_except_raise</th>\n",
+       "      <th>n_captures_misplaced_bare_raise</th>\n",
        "      <th>project</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4960,6 +4977,9 @@
        "      <th>23</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>check</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -4972,12 +4992,18 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>__init__</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -4990,6 +5016,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4999,10 +5028,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -5017,12 +5052,18 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>pandas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119030</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>initialize_options</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5035,12 +5076,18 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>pandas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119033</th>\n",
        "      <td>/home/r4ph/desenv/exception-miner/projects/py/...</td>\n",
        "      <td>initialize_options</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5053,11 +5100,14 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>pandas</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21484 rows × 6 columns</p>\n",
+       "<p>21433 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5074,23 +5124,36 @@
        "119033  /home/r4ph/desenv/exception-miner/projects/py/...  initialize_options   \n",
        "119034  /home/r4ph/desenv/exception-miner/projects/py/...    build_extensions   \n",
        "\n",
-       "        n_try_except  n_try_pass  n_generic_except project  \n",
-       "23                 0           0                 0  django  \n",
-       "24                 0           0                 0  django  \n",
-       "25                 0           0                 0  django  \n",
-       "28                 0           0                 0  django  \n",
-       "32                 0           0                 0  django  \n",
-       "...              ...         ...               ...     ...  \n",
-       "119029             0           0                 0  pandas  \n",
-       "119030             0           0                 0  pandas  \n",
-       "119032             0           0                 0  pandas  \n",
-       "119033             0           0                 0  pandas  \n",
-       "119034             0           0                 0  pandas  \n",
+       "        n_try_except  n_try_pass  n_generic_except  n_captures_broad_raise  \\\n",
+       "23                 0           0                 0                       0   \n",
+       "24                 0           0                 0                       0   \n",
+       "25                 0           0                 0                       0   \n",
+       "28                 0           0                 0                       0   \n",
+       "32                 0           0                 0                       0   \n",
+       "...              ...         ...               ...                     ...   \n",
+       "119029             0           0                 0                       0   \n",
+       "119030             0           0                 0                       0   \n",
+       "119032             0           0                 0                       0   \n",
+       "119033             0           0                 0                       0   \n",
+       "119034             0           0                 0                       0   \n",
        "\n",
-       "[21484 rows x 6 columns]"
+       "        n_captures_try_except_raise  n_captures_misplaced_bare_raise project  \n",
+       "23                                0                                0  django  \n",
+       "24                                0                                0  django  \n",
+       "25                                0                                0  django  \n",
+       "28                                0                                0  django  \n",
+       "32                                0                                0  django  \n",
+       "...                             ...                              ...     ...  \n",
+       "119029                            0                                0  pandas  \n",
+       "119030                            0                                0  pandas  \n",
+       "119032                            0                                0  pandas  \n",
+       "119033                            0                                0  pandas  \n",
+       "119034                            0                                0  pandas  \n",
+       "\n",
+       "[21433 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
