--- a/notebooks/eh_py_analysis.ipynb
+++ b/notebooks/eh_py_analysis.ipynb
@@ -4761,7 +4761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4782,7 +4782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -4820,6 +4820,7 @@
        "      <th>n_try_return</th>\n",
        "      <th>str_except_identifiers</th>\n",
        "      <th>str_raise_identifiers</th>\n",
+       "      <th>except_block</th>\n",
        "      <th>project</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4840,6 +4841,7 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4858,6 +4860,7 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4876,6 +4879,7 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4894,6 +4898,7 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ValueError</td>\n",
+       "      <td>[]</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4912,6 +4917,7 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ValueError</td>\n",
+       "      <td>[]</td>\n",
        "      <td>django</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4947,15 +4953,22 @@
        "3                            0                                0           0   \n",
        "4                            0                                0           0   \n",
        "\n",
-       "   n_try_return str_except_identifiers str_raise_identifiers project  \n",
-       "0             0                    NaN                   NaN  django  \n",
-       "1             0                    NaN                   NaN  django  \n",
-       "2             0                    NaN                   NaN  django  \n",
-       "3             0                    NaN            ValueError  django  \n",
-       "4             0                    NaN            ValueError  django  "
+       "   n_try_return str_except_identifiers str_raise_identifiers except_block  \\\n",
+       "0             0                    NaN                   NaN           []   \n",
+       "1             0                    NaN                   NaN           []   \n",
+       "2             0                    NaN                   NaN           []   \n",
+       "3             0                    NaN            ValueError           []   \n",
+       "4             0                    NaN            ValueError           []   \n",
+       "\n",
+       "  project  \n",
+       "0  django  \n",
+       "1  django  \n",
+       "2  django  \n",
+       "3  django  \n",
+       "4  django  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4967,102 +4980,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/eric3/git/exception-miner/venv/lib/python3.7/site-packages/ipykernel_launcher.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file</th>\n",
-       "      <th>function</th>\n",
-       "      <th>func_body</th>\n",
-       "      <th>n_try_except</th>\n",
-       "      <th>n_try_pass</th>\n",
-       "      <th>n_generic_except</th>\n",
-       "      <th>n_raise</th>\n",
-       "      <th>n_captures_broad_raise</th>\n",
-       "      <th>n_captures_try_except_raise</th>\n",
-       "      <th>n_captures_misplaced_bare_raise</th>\n",
-       "      <th>n_try_else</th>\n",
-       "      <th>n_try_return</th>\n",
-       "      <th>str_except_identifiers</th>\n",
-       "      <th>str_raise_identifiers</th>\n",
-       "      <th>project</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
-       "      <td>incr</td>\n",
-       "      <td>def incr(self, key, delta):\\n        client = ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ValueError</td>\n",
-       "      <td>django</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                 file function  \\\n",
-       "33  /home/eric3/git/exception-miner/projects/py/dj...     incr   \n",
-       "\n",
-       "                                            func_body  n_try_except  \\\n",
-       "33  def incr(self, key, delta):\\n        client = ...             0   \n",
-       "\n",
-       "    n_try_pass  n_generic_except  n_raise  n_captures_broad_raise  \\\n",
-       "33           0                 0        1                       0   \n",
-       "\n",
-       "    n_captures_try_except_raise  n_captures_misplaced_bare_raise  n_try_else  \\\n",
-       "33                            0                                0           0   \n",
-       "\n",
-       "    n_try_return str_except_identifiers str_raise_identifiers project  \n",
-       "33             0                    NaN            ValueError  django  "
+       "'[\\'except LookupError:\\\\n                raise CommandError(\"Unknown model: %s\" % label)\\', \\'except LookupError as e:\\\\n                raise CommandError(str(e))\\']'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['n_raise'] > 0][df['function'] == 'incr']"
+    "df[df['n_try_except'] > 1]['except_block'].values[0]"
    ]
   },
   {
