--- a/notebooks/eh_py_analysis.ipynb
+++ b/notebooks/eh_py_analysis.ipynb
@@ -4980,22 +4980,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>function</th>\n",
+       "      <th>func_body</th>\n",
+       "      <th>n_try_except</th>\n",
+       "      <th>n_try_pass</th>\n",
+       "      <th>n_generic_except</th>\n",
+       "      <th>n_raise</th>\n",
+       "      <th>n_captures_broad_raise</th>\n",
+       "      <th>n_captures_try_except_raise</th>\n",
+       "      <th>n_captures_misplaced_bare_raise</th>\n",
+       "      <th>n_try_else</th>\n",
+       "      <th>n_try_return</th>\n",
+       "      <th>str_except_identifiers</th>\n",
+       "      <th>str_raise_identifiers</th>\n",
+       "      <th>except_block</th>\n",
+       "      <th>project</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
+       "      <td>parse_apps_and_model_labels</td>\n",
+       "      <td>def parse_apps_and_model_labels(labels):\\n    ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LookupError LookupError</td>\n",
+       "      <td>CommandError CommandError</td>\n",
+       "      <td>['except LookupError:\\n                raise C...</td>\n",
+       "      <td>django</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
+       "      <td>handle</td>\n",
+       "      <td>def handle(self, app_or_project, name, target=...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FileExistsError OSError OSError</td>\n",
+       "      <td>CommandError CommandError CommandError Command...</td>\n",
+       "      <td>['except FileExistsError:\\n                rai...</td>\n",
+       "      <td>django</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
+       "      <td>run_tests</td>\n",
+       "      <td>def run_tests(self, test_labels, extra_tests=N...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Exception Exception</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['except Exception:\\n            run_failed = ...</td>\n",
+       "      <td>django</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
+       "      <td>run</td>\n",
+       "      <td>def run(self, result):\\n        \"\"\"\\n        D...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>multiprocessing TimeoutError StopIteration</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['except multiprocessing.TimeoutError:\\n      ...</td>\n",
+       "      <td>django</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/dj...</td>\n",
+       "      <td>setUpClass</td>\n",
+       "      <td>def setUpClass(cls):\\n        super().setUpCla...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Exception Exception</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['except Exception:\\n                    cls._...</td>\n",
+       "      <td>django</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101779</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/pa...</td>\n",
+       "      <td>_check_join</td>\n",
+       "      <td>def _check_join(left, right, result, join_col,...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102764</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/pa...</td>\n",
+       "      <td>test_apply_out_of_range</td>\n",
+       "      <td>def test_apply_out_of_range(request, tz_naive_...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>OutOfBoundsDatetime</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110157</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/pa...</td>\n",
+       "      <td>get_versions</td>\n",
+       "      <td>def get_versions():\\n    \"\"\"Get version inform...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NotThisMethod NameError NotThisMethod NotThis...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110450</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/pa...</td>\n",
+       "      <td>linkcode_resolve</td>\n",
+       "      <td>def linkcode_resolve(domain, info):\\n    \"\"\"\\n...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AttributeError TypeError TypeError OSError</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110485</th>\n",
+       "      <td>/home/eric3/git/exception-miner/projects/py/pa...</td>\n",
+       "      <td>run</td>\n",
+       "      <td>def run(self):\\n        for clean_me in self._...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>OSError OSError</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pandas</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>351 rows × 16 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'[\\'except LookupError:\\\\n                raise CommandError(\"Unknown model: %s\" % label)\\', \\'except LookupError as e:\\\\n                raise CommandError(str(e))\\']'"
+       "                                                     file  \\\n",
+       "84      /home/eric3/git/exception-miner/projects/py/dj...   \n",
+       "98      /home/eric3/git/exception-miner/projects/py/dj...   \n",
+       "181     /home/eric3/git/exception-miner/projects/py/dj...   \n",
+       "208     /home/eric3/git/exception-miner/projects/py/dj...   \n",
+       "373     /home/eric3/git/exception-miner/projects/py/dj...   \n",
+       "...                                                   ...   \n",
+       "101779  /home/eric3/git/exception-miner/projects/py/pa...   \n",
+       "102764  /home/eric3/git/exception-miner/projects/py/pa...   \n",
+       "110157  /home/eric3/git/exception-miner/projects/py/pa...   \n",
+       "110450  /home/eric3/git/exception-miner/projects/py/pa...   \n",
+       "110485  /home/eric3/git/exception-miner/projects/py/pa...   \n",
+       "\n",
+       "                           function  \\\n",
+       "84      parse_apps_and_model_labels   \n",
+       "98                           handle   \n",
+       "181                       run_tests   \n",
+       "208                             run   \n",
+       "373                      setUpClass   \n",
+       "...                             ...   \n",
+       "101779                  _check_join   \n",
+       "102764      test_apply_out_of_range   \n",
+       "110157                 get_versions   \n",
+       "110450             linkcode_resolve   \n",
+       "110485                          run   \n",
+       "\n",
+       "                                                func_body  n_try_except  \\\n",
+       "84      def parse_apps_and_model_labels(labels):\\n    ...             2   \n",
+       "98      def handle(self, app_or_project, name, target=...             3   \n",
+       "181     def run_tests(self, test_labels, extra_tests=N...             2   \n",
+       "208     def run(self, result):\\n        \"\"\"\\n        D...             2   \n",
+       "373     def setUpClass(cls):\\n        super().setUpCla...             2   \n",
+       "...                                                   ...           ...   \n",
+       "101779  def _check_join(left, right, result, join_col,...             2   \n",
+       "102764  def test_apply_out_of_range(request, tz_naive_...             2   \n",
+       "110157  def get_versions():\\n    \"\"\"Get version inform...             4   \n",
+       "110450  def linkcode_resolve(domain, info):\\n    \"\"\"\\n...             6   \n",
+       "110485  def run(self):\\n        for clean_me in self._...             2   \n",
+       "\n",
+       "        n_try_pass  n_generic_except  n_raise  n_captures_broad_raise  \\\n",
+       "84               0                 0        2                       0   \n",
+       "98               0                 0        4                       0   \n",
+       "181              0                 2        2                       0   \n",
+       "208              0                 0        0                       0   \n",
+       "373              0                 2        2                       0   \n",
+       "...            ...               ...      ...                     ...   \n",
+       "101779           0                 0        2                       0   \n",
+       "102764           2                 0        2                       0   \n",
+       "110157           3                 0        4                       0   \n",
+       "110450           0                 0        6                       0   \n",
+       "110485           2                 0        2                       0   \n",
+       "\n",
+       "        n_captures_try_except_raise  n_captures_misplaced_bare_raise  \\\n",
+       "84                                0                                0   \n",
+       "98                                0                                0   \n",
+       "181                               1                                0   \n",
+       "208                               0                                0   \n",
+       "373                               2                                0   \n",
+       "...                             ...                              ...   \n",
+       "101779                            0                                0   \n",
+       "102764                            0                                0   \n",
+       "110157                            0                                0   \n",
+       "110450                            0                                0   \n",
+       "110485                            0                                0   \n",
+       "\n",
+       "        n_try_else  n_try_return  \\\n",
+       "84               0             0   \n",
+       "98               0             0   \n",
+       "181              0             0   \n",
+       "208              0             0   \n",
+       "373              0             0   \n",
+       "...            ...           ...   \n",
+       "101779           2             0   \n",
+       "102764           0             0   \n",
+       "110157           0             2   \n",
+       "110450           0             0   \n",
+       "110485           0             0   \n",
+       "\n",
+       "                                   str_except_identifiers  \\\n",
+       "84                                LookupError LookupError   \n",
+       "98                        FileExistsError OSError OSError   \n",
+       "181                                   Exception Exception   \n",
+       "208            multiprocessing TimeoutError StopIteration   \n",
+       "373                                   Exception Exception   \n",
+       "...                                                   ...   \n",
+       "101779                                                NaN   \n",
+       "102764                                OutOfBoundsDatetime   \n",
+       "110157   NotThisMethod NameError NotThisMethod NotThis...   \n",
+       "110450         AttributeError TypeError TypeError OSError   \n",
+       "110485                                    OSError OSError   \n",
+       "\n",
+       "                                    str_raise_identifiers  \\\n",
+       "84                              CommandError CommandError   \n",
+       "98      CommandError CommandError CommandError Command...   \n",
+       "181                                                   NaN   \n",
+       "208                                                   NaN   \n",
+       "373                                                   NaN   \n",
+       "...                                                   ...   \n",
+       "101779                                                NaN   \n",
+       "102764                                                NaN   \n",
+       "110157                                                NaN   \n",
+       "110450                                                NaN   \n",
+       "110485                                                NaN   \n",
+       "\n",
+       "                                             except_block project  \n",
+       "84      ['except LookupError:\\n                raise C...  django  \n",
+       "98      ['except FileExistsError:\\n                rai...  django  \n",
+       "181     ['except Exception:\\n            run_failed = ...  django  \n",
+       "208     ['except multiprocessing.TimeoutError:\\n      ...  django  \n",
+       "373     ['except Exception:\\n                    cls._...  django  \n",
+       "...                                                   ...     ...  \n",
+       "101779                                                NaN  pandas  \n",
+       "102764                                                NaN  pandas  \n",
+       "110157                                                NaN  pandas  \n",
+       "110450                                                NaN  pandas  \n",
+       "110485                                                NaN  pandas  \n",
+       "\n",
+       "[351 rows x 16 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['n_try_except'] > 1]['except_block'].values[0]"
+    "df[df['n_try_except'] > 1]"
    ]
   },
   {
